--- a/.github/workflows/track.yml
+++ b/.github/workflows/track.yml
@@ -8,10 +8,14 @@ on:
 jobs:
   run-tracker:
     runs-on: ubuntu-latest
+    permissions:
+    contents: write   # 👈 needed to push changes
 
     steps:
     - name: Checkout repo
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v5
